feat: добавлен метод получения информации о бронировании по id
