# internal/app/apiserver/router.go
@@ -61,6 +61,8 @@ func (s *ApiServer) initRoutes() {
 	authorized.POST("/api/v1/calendar/convertFromLink", s.handler.V1.ConverCalendarFromLink)
 
 	authorized.GET("/api/v1/bookings", s.handler.V1.GetBookings)
+
+	authorized.GET("/api/v1/booking/:id", s.handler.V1.GetBooking)
 	authorized.POST("/api/v1/booking", s.handler.V1.CreateBooking)
 
 	s.router.NoRoute(func(c *gin.Context) {
